--- a/src/views/Footer/Footer.css
+++ b/src/views/Footer/Footer.css
@@ -3,6 +3,14 @@ footer {
   color: white;
   padding: 20px;
 }
+/* ---nag-conflict ang footer .container sa adevertisement css--- */
+footer .container {
+  /* height: 100px; */
+  justify-content: space-evenly;
+  align-items: center;
+  width: 100%;
+  margin: auto;
+}
 footer .container .col {
   display: flex;
   flex-direction: column;
