--- a/src/views/Home/sections/SectionThree.css
+++ b/src/views/Home/sections/SectionThree.css
@@ -26,6 +26,41 @@
   font-style: italic;
 }
 
+#s3-buttons-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  width: 100%;
+  overflow: hidden;
+  margin-bottom: 5rem;
+}
+
+#s3-buttons {
+  margin-bottom: 4rem;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+
+#s3-buttons button {
+  height: 3.5rem;
+  padding: 0.5rem 0.5rem;
+  margin: 0.5rem;
+  border-radius: 0.5rem;
+  font-weight: bold;
+}
+
+#s3-buttons button:hover {
+  background-color: #2b2b2b;
+  color: white;
+  transition: 0.3s;
+}
+
 #s3-card-container {
   display: flex;
   flex-wrap: wrap;
@@ -34,7 +69,7 @@
   cursor: pointer;
   max-width: 1200px;
   overflow: hidden;
-  margin-bottom: 5rem;
+  /* margin-bottom: 5rem; */
 }
 
 #s3-card-box {
@@ -45,4 +80,18 @@
   width: 100%;
   max-height: 30rem;
   max-width: 30rem;
+}
+
+@media (max-width: 576px) {
+  #s3-buttons button {
+    height: 2.5rem;
+    padding: 0.4rem 0.4rem;
+    margin: 0.5rem;
+    border-radius: 0.3rem;
+    font-weight: bold;
+    text-align: center;
+    /* width: 100%; */
+    /* max-height: 20rem; */
+    /* max-width: 20rem; */
+  }
 }
