--- a/src/views/Home/sections/AdvertisementOne.css
+++ b/src/views/Home/sections/AdvertisementOne.css
@@ -1,6 +1,6 @@
 #advertisementOne-container {
   max-width: 1300px;
-  height: 90vh;
+  /* height: 90vh; */
   width: 100%;
   display: flex;
   justify-content: center;
