--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-* {
+/* * {
   box-sizing: border-box;
 }
 
@@ -10,11 +10,11 @@ body {
   font-family: sans-serif;
   font-size: 14px;
 }
-/* 
+
 .container {
   max-width: 1300px;
   height: 100vh;
   width: 100%;
   margin: auto;
   padding: 1.5rem;
-}  */
+} */
