--- a/src/views/Footer/Footer.css
+++ b/src/views/Footer/Footer.css
@@ -6,10 +6,13 @@ footer {
 /* ---nag-conflict ang footer .container sa adevertisement css--- */
 footer .container {
   /* height: 100px; */
-  justify-content: space-evenly;
+  justify-content: center;
   align-items: center;
   width: 100%;
   margin: auto;
+}
+footer .container .row {
+  display: flex;
 }
 footer .container .col {
   display: flex;
