--- a/src/views/Home/sections/SectionThree.css
+++ b/src/views/Home/sections/SectionThree.css
@@ -1,4 +1,4 @@
-#s2-container {
+#s3-container {
   max-width: 1300px;
   height: auto;
   width: 100%;
@@ -9,7 +9,7 @@
   overflow: hidden;
 }
 
-#s2-heading {
+#s3-heading {
   height: 20vh;
   width: 100%;
   display: flex;
@@ -19,36 +19,49 @@
   text-align: center;
 }
 
-#s2-h1 {
+#s3-h1 {
   font-weight: bold;
 }
-
-#s2-h6 {
+#s3-h6 {
   font-style: italic;
 }
 
-#s2-buttons {
+#s3-buttons-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  width: 100%;
+  overflow: hidden;
+  margin-bottom: 5rem;
+}
+
+#s3-buttons {
   margin-bottom: 4rem;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  align-items: center;
 }
 
-#s2-buttons button {
+#s3-buttons button {
   height: 3.5rem;
-  padding: 0.5rem 1rem;
+  padding: 0.5rem 0.5rem;
   margin: 0.5rem;
   border-radius: 0.5rem;
   font-weight: bold;
 }
 
-#s2-buttons button:hover {
+#s3-buttons button:hover {
   background-color: #2b2b2b;
   color: white;
   transition: 0.3s;
 }
 
-#card-container {
+#s3-card-container {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -56,5 +69,29 @@
   cursor: pointer;
   max-width: 1200px;
   overflow: hidden;
-  margin-bottom: 5rem;
+  /* margin-bottom: 5rem; */
+}
+
+#s3-card-box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  width: 100%;
+  max-height: 30rem;
+  max-width: 30rem;
+}
+
+@media (max-width: 576px) {
+  #s3-buttons button {
+    height: 2.5rem;
+    padding: 0.4rem 0.4rem;
+    margin: 0.5rem;
+    border-radius: 0.3rem;
+    font-weight: bold;
+    text-align: center;
+    /* width: 100%; */
+    /* max-height: 20rem; */
+    /* max-width: 20rem; */
+  }
 }
