--- a/src/views/Header/Header.css
+++ b/src/views/Header/Header.css
@@ -13,7 +13,8 @@ header .btn {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100px;
+  padding: 10px;
+  width: 150px;
   margin-bottom: 10px;
   font-family: "Pacifico", cursive;
   background-color: rgb(209, 77, 221);
