--- a/src/views/Header/Header.css
+++ b/src/views/Header/Header.css
@@ -1,10 +1,8 @@
-
-@import url("https://fonts.googleapis.com/css2?family=Pacifico&family=Poiret+One&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Pacifico&family=Poiret+One&display=swap');
 
 header#navbar .container nav {
   height: 20px;
   opacity: 0.5;
-
 }
 header#navbar a {
   font-family: 'Pacifico', cursive;
