added some content

--- a/src/views/Header/Header.css
+++ b/src/views/Header/Header.css
@@ -18,6 +18,7 @@ header .btn {
   align-items: center;
   padding: 10px;
   width: 150px;
+  margin-top: 10px;
   margin-bottom: 10px;
   font-family: "Pacifico", cursive;
   background-color: rgb(209, 77, 221);
