--- a/src/views/Footer/Footer.css
+++ b/src/views/Footer/Footer.css
@@ -34,6 +34,10 @@ footer #footer-container .col .form-control {
   border-color: none;
 }
 
-footer p {
+footer h3#socmed a .box-icon {
+  display: flex;
+}
+
+footer p.copy {
   text-align: center;
 }
